# fmtparser

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  fmtparser.sublime-project
.github/workflows/: build-test.yml  build.yml  publish_test_results.yml  test.yml
docs/: doxygen.config.in  doxyrest-config.lua  example.c  example.cmake  example.rst  index.rst
docs/sphinx/: conf.py
lib/: CMakeLists.txt
lib/include/: fmt_bool.h  fmt_infer.h  fmt_parser.h  fmt_spec.h  fmt_spec_api.h  fmt_spec_kind.h  fmt_spec_len.h  fmt_spec_type.h  fmt_status.h  fmt_util.h  fmt_vals.def
lib/src/: debug_internal.h  infer.c  parser.c  parser_internal.h  spec_api.c  util.c  util_internal.h
site/: site-public.cmake
test/: CMakeLists.txt  demo_001.c  test.c  test.sh
test_suite/: test_001.txt  test_002.txt
toolchain/: Toolchain-cross-mingw32-linux.cmake
tools/: generate_doc.sh  make.sh  style.sh
tools/lib/: core.sh  docgen.sh  site.sh  target.sh  version.sh
unittest/: CMakeLists.txt  main.cpp  wrap.hpp
